# personal-demographics-service-api

./: .editorconfig  .envrc  .flake8  .gitignore  .gitleaksignore  .pylintrc  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Patient Demographics Sandbox.postman_collection.json  README.md  azure-pipelines.yml  ecs-proxies-containers.yml  ecs-proxies-deploy.yml  manifest.toml  manifest.yml  manifest_template.yml  package-lock.json  package.json  patient-demographics-sandbox.postman_collection.json  patient-information-api.yaml  perf-test.js  pyproject.toml
.circleci/: .#curl  config.yml
.dependabot/: config.yml
.github/: pull_request_template.md
apiproxy/: pds.xml
azure/: azure-build-pipeline.yml  azure-overnight-build-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  discover-apigee-app-custom-attributes-pipeline.yml  discover-apigee-app-flow-vars-pipeline.yml  overnight-test-against-internal-dev-pipeline.yml  project.yml
identity-v1/: README.md
karate-tests/: Dockerfile  README.md  build-sandbox-ado.sh  build-sandbox.sh  karate-config.js  pom.xml
postman/: deployed-sandbox.postman_environment.json  local-sandbox.postman_environment.json  patient-demographics-sandbox.postman_collection.json
products/: application-restricted-higher-ratelimit.yaml  application-restricted-higher-ratelimit.yml  application-restricted.yml  user-restricted-higher-latelimit.yml  user-restricted-higher-ratelimit.yml  user-restricted.yml
sandbox/: .eslintrc.js  Dockerfile  README.md  app.js  app.yaml  package-lock.json  package.json
scripts/: build_proxy.sh  calculate_version.py  check_python_licenses.sh  deploy.sh  deploy_proxy.sh  deploy_spec.sh  duplicate_examples.sh  find_apps_with_custom_attribute.py  find_apps_with_custom_flow_var.py  format_examples.py  generate_examples.py  merge_spec.py  nhs_number_utils.py  pre-commit  set_version.py  tag-versions.sh  template.py  test_nhs_number_utils.py  update_examples.sh  xml_validate.sh  xml_validator.py  xml_validator_precommit.py  yaml2json.py
short-version/: personal-demographics-short-version.json
specification/: patient-demographics-api.yaml  patient-demographics-service-api.yaml  personal-demographics.yaml
stubserver/: README.md  Readme.md  app.js  (+3 more)
tests/: .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  package-lock.json  package.json  perf-test.js  pyproject.toml  pytest.ini  requirements.txt  sandbox-test-report.xml
tests/e2e/: Personal-Demographics-Service-SmokeTest.json  e2e.json  personal-demographics-service-sandbox.json  personal-demographics-service.json  regression-pack.json  sandbox.json  smoke.json  test-data.json  test-runner.js  user-restricted-smoke.json
tests/e2e/environments/: deploy_postman_environment.template  local.postman_environment.json  postman_environment.json.template  sandbox.postman_environment.json
tests/functional/: README.md  conftest.py  example.env  functional-test-report.xml  general.py  requirements.txt  test_PDS_Sandbox.py  test_application_restricted.py  test_citizen_access.py  test_new_features.py  test_patient_access.py  test_patient_create.py  test_proxy_behaviour.py  test_smoke_tests.py  test_sync_wrap.py  test_unattended_access.py  test_user_restricted.py
tests/functional/config_files/: appRestrictedCfg.py  baseCfg.py  config.py  environment.py  oauthCfg.py  patientAccessCfg.py  proxyBehaviorCfg.py  syncWrapCfg.py
tests/functional/configuration/: config.py
tests/functional/data/: expected_errors.py  patients.py  pds_scenarios.py  responses.py  searches.py  test_patients.py  updates.py  users.py
tests/functional/data/responses/: empty_authorization_header.json  empty_x-request_id.json  invalid_access_token.json  invalid_patient_create_data.json  invalid_urid_header.json  invalid_x-request_id.json  missing_authorization_header.json  missing_urid_header.json  missing_x-request_id.json  too_many_matches.json  valid_patient_post_response.json
tests/functional/features/: application_restricted.feature  healthcare_worker_access.feature  healthcare_worker_retrieve.feature  healthcare_worker_search.feature  healthcare_worker_update.feature  nhs_number_allocate.feature  patient_access_authentication.feature  patient_access_retrieve.feature  patient_access_update.feature  post_patient.feature  post_patient_spike_arrest.feature  proxy_behaviour.feature  related_person.feature  status_endpoints.feature  sync_wrap.feature  unattended_access.feature
tests/functional/features/a__search_for_a_patient/: search__application_restricted.feature
tests/functional/steps/: given.py  then.py  when.py
tests/functional/utils/: apigee_api.py  apigee_api_apps.py  apigee_api_products.py  data_bank.py  helper.py  helpers.py  scripts.py
tests/performance/: .locust.config  README.md  authenticator.py  locustfile.py
tests/performance/common/: auth.py
tests/sandbox/: conftest.py  test_sandbox.py
tests/sandbox/configuration/: config.py  environment.py
tests/sandbox/data/: scenarios.py
tests/sandbox/utils/: helpers.py
tests/scripts/: apigee_auth.sh  config.py  environment.py  generic_request.py  install_apigee_cmds.sh  pds_request.py
tests/user_restricted/: conftest.py  example.env  test_user_restricted.py
tests/user_restricted/configuration/: config.py  environment.py
tests/user_restricted/data/: pds_scenarios.py
tests/user_restricted/utils/: authenticator.py  check_oauth.py  env.py  helpers.py  oauth_helper.py
(+822 files in other folders)
