[project]
python = "^3.9"
name = "personal-demographics-service-api"


[tool.poetry]
name = "sandbox"
version = "0.0.1-alpha"
description = "PDS API Sandbox"
package-mode = false

license = "MIT"

authors = [
    "Laurence Pakenham-Smith <laurence.smith2@nhs.net>",
    "Alex Hawdon <alex.hawdon1@nhs.net>",
    "Tony Heap <tony.heap1@nhs.net>"
]

readme = 'README.md'

repository = "https://github.com/NHSDigital/personal-demographics-service-api"
homepage = "https://digital.nhs.uk/developer/api-catalogue/personal-demographics-service-fhir"

keywords = ["healthcare", "uk", "nhs", "demographics"]


[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^5.2"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.10.2"
gitpython = "^3.1.41"
requests = "^2.27.1"
locust = "^1.2"
pytest-bdd = "^8.1.0"
cryptography = "^43.0.1"
python-dateutil = "^2.8.1"
pytest-rerunfailures = "^9.1.1"
polling2 = "^0.4.7"
pytest-nhsd-apim = "^5.0.0"


[tool.poetry.dev-dependencies]
authlib = "^1.3.1"
flake8 = "^3.8.3"
black = "^24.3"
jinja2 = "^3.1.6"
pytest = "^8.2.0"
pytest_check = "^1.0.1"
pytest-docker = "^3.2.2"
pytest-rerunfailures = "9.1.1"
pycryptodome = "^3.19.1"
pyjwt = "^2.4.0"
pip-licenses = "^3.5.3"
glob2 = "^0.7"

[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.14.0"
selenium = "^4.0.0"
aiohttp = "^3.11.0b0"

[tool.pytest.ini_options]
markers = [
    "retrieve_scenarios",
    "search_scenarios",
    "update_scenarios",
    "related_person_scenarios",
    "apmspii_832",
    "apmspii_874",
    "apmspii_921",
    "smoke_test",
    "asid_required"
]
