[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["paruliansaragi <parulian.saragi1@nhs.net>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
pytest = "^6.1.2"
pytest-xdist = "^2.1.0"
pytest-sugar = "^0.9.4"
api-test-utils = {url = "https://github.com/NHSDigital/apim-test-utils/releases/download/v1.0.86-alpha/api_test_utils-1.0.86a0-py3-none-any.whl"}
pytest-bdd = "^4.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
